--- a/server/public/css/Price/search.css
+++ b/server/public/css/Price/search.css
@@ -23,6 +23,52 @@ body {
     filter: sepia(0.5);
 }
 
+.container-btn-return{
+    position: absolute;
+    top: 5vh;
+    left: 5vw;
+    padding: 0%;
+    margin: 0%;
+    border: none;
+    outline: none;
+    background: radial-gradient(rgb(0, 0, 0), rgb(0, 0, 0), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
+}
+
+.btn-return{
+    display: inline;
+    position: relative;
+    border: none;
+    outline: none;
+    background-image: url('../../../images/flecha_volver.png');
+    background-color: #4d4f5700;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    padding: 0%;
+    margin: 0%;
+}
+
+.container-btn-return:hover{
+    background: radial-gradient(rgb(255, 255, 255), rgb(255, 255, 255), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
+}
+
+
+.btn:hover {
+    background-color: rgba(10, 60, 73, 0.753);
+}
+
+.btn>a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1rem;
+    text-align: center;
+}
+
+
+
 .container-busqueda {
     display: flex;
     flex-direction: column;
@@ -34,6 +80,7 @@ body {
     height: 60vh;
     border-radius: 0.5em;
     box-shadow: 1px 1px 10px #9e9e9e;
+    padding-bottom: 4%;
 }
 
 @media (max-width: 650px) {
@@ -42,7 +89,7 @@ body {
     }
 }
 
-.container-busqueda h4 {
+.container-busqueda>h4 {
     position: relative;
     font-family: auto;
     font-size: -webkit-xxx-large;
@@ -59,7 +106,7 @@ body {
     height: 20vh;
     justify-content: space-around;
     align-items: inherit;
-    padding: 5% 8%;
+    padding: 3% 8%;
     padding-top: 0%;
     font-size: 1.2rem;
 }
@@ -111,8 +158,14 @@ body {
 }
 
 .container-btn-form {
+    display: flex;
+    justify-content: center;
+    width: 140px;
+    position: relative;
     align-self: center;
-    padding-top: 3%;
+    padding-top: 2%;
+    outline: none;
+    border: none;
 }
 
 .btn-form {
@@ -138,12 +191,26 @@ body {
     touch-action: manipulation;
     white-space: nowrap;
     will-change: box-shadow, transform;
+    width: -webkit-fill-available;
+    border: none;
+    outline: none;
 }
 
 .btn-form:hover {
     color: #b5f4ff;
     box-shadow: rgb(66, 173, 206) 4px 2px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -2px, rgb(66, 173, 206) 0 -2px 0 inset;
     transform: translateY(-3px) translateX(-2px);
+}
+
+.btn-form>a {
+    text-decoration: none;
+    color: #ffffff;
+    text-align: center;
+}
+
+a>h4 {
+    margin: 0%;
+    font-weight: normal;
 }
 
 .container-version {
