--- a/server/public/css/Price/table.css
+++ b/server/public/css/Price/table.css
@@ -18,6 +18,40 @@ body{
     filter: sepia(0.5);
 }
 
+.container-btn-return {
+    position: static;
+    top: 5vh;
+    left: 5vw;
+    padding: 0%;
+    margin: 0%;
+    border: none;
+    outline: none;
+    background: radial-gradient(rgb(0, 0, 0), rgb(0, 0, 0), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
+}
+
+.container-btn-return:hover {
+    background: radial-gradient(rgb(255, 255, 255), rgb(255, 255, 255), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
+}
+
+.btn-return {
+    display: inline;
+    position: relative;
+    border: none;
+    outline: none;
+    background-image: url('../../../images/flecha_volver.png');
+    background-color: #4d4f5700;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    padding: 0%;
+    margin: 0%;
+}
+
+
+
 .container-table {
     display: flex;
     flex-direction: column;
