--- a/server/views/Price/table.ejs
+++ b/server/views/Price/table.ejs
@@ -5,10 +5,9 @@
 
     <body>
         <div class="table"> 
-            <div class="container-btns">
-                <button class='btn'><a href="/api/menu/prices/search"> <h4>Volver</h4></a></button>
-                <button class='btn'><a href="/api/menu/prices/searchMassiveModif"><h4>Modificación Masiva (no va acá!)</h4></a></button>
-            </div>           
+            <a class='container-btn-return' href="/api/menu/prices/search">
+                <button class='btn-return' title="Volver"></button>
+            </a>           
             <div class="container-table">                            
                 <table id='myTable'>
                     <thead>
