--- a/server/public/css/Price/searchModif.css
+++ b/server/public/css/Price/searchModif.css
@@ -15,7 +15,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: -webkit-fill-available;
+    height: auto;
     background-image: url('../../../images/bg-verificador-precios-V4_edicion1.png');
     background-size: cover;
     background-position: center;
