--- a/server/views/Price/tableModif.ejs
+++ b/server/views/Price/tableModif.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<%- include('../templates/head', {datahead: {titulo: 'Lista de Precios' , css: '/css/Price/table.css' }}) %>
+<%- include('../templates/head', {datahead: {titulo: 'Lista de Precios' , css: '/css/Price/tableModif.css' }}) %>
 
     <body>
         <div class="table"> 
@@ -13,7 +13,7 @@
                     <thead>
                         <tr>
                             <th>
-                                <input class="inputCheckbox" type="checkbox" checked disabled>
+                                <div></div>
                             </th>
                             <th>
                                 <form method="POST" id="input-order-id" action="/api/menu/prices/tableMassiveModif">                                    
@@ -37,7 +37,11 @@
                             <% for (var i = 0; i < data.product.pid.length;  i++ ) { %>                            
                                 <tr>
                                     <form method="POST" id="newprice" action="/api/menu/prices/tableMassiveModif">
-                                        <td><input class="inputCheckbox" type="checkbox"  onchange="this.form.submit()"></td>                                    
+                                        <% if (data.product.updtd[i] == false) { %>
+                                            <td><input class="iconUpdate" onclick="this.form.submit()"></td>
+                                        <% } else if (data.product.updtd[i] == true) { %>
+                                            <td><input class="iconUpdated" onclick="this.form.submit()" disabled></td>
+                                        <% } %>                                    
                                         <td><input class="inputDisable" type="text" name="id" value="<%= data.product.pid[i] %>" readonly></td>
                                         <td><input class="inputDisable" type="text" name="name" value="<%= data.product.pname[i] %>" readonly title="<%= data.product.pname[i] %>"></td>
                                         <td><input class="inputPrice" type="number" name="newPrice" value="<%= data.product.pprice[i] %>" /></td>                                    
@@ -100,7 +104,6 @@
                     submitForm('input-page-form');
                 }                 
             }
-
 
             function submitForm(formId) {
                 var oForm = document.getElementById(formId);
