--- a/server/views/Login/login.ejs
+++ b/server/views/Login/login.ejs
@@ -5,6 +5,9 @@
 
 <body>
 <div class='login'>
+    <div class="container-logo">
+
+    </div>
     <div class='container-login'>
         <h3><%=__('Bienvenido')%></h3>
         <form class='container-form-login' method='POST' action='/api/menu/'>
