--- a/server/public/css/Login/login.css
+++ b/server/public/css/Login/login.css
@@ -21,6 +21,19 @@ body {
     background-repeat: no-repeat;
     position: absolute;
     filter: sepia(0.5);
+    z-index: -1;
+}
+
+.container-logo {
+    position: absolute;
+    background-image: url('../../../images/Systel.png');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    filter: opacity(0.2);
+    width: 90vw;
+    height: 40vh;
+    z-index: 1;
 }
 
 .container-login {
@@ -34,6 +47,7 @@ body {
     height: 60vh;
     border-radius: 0.5em;
     box-shadow: 1px 1px 10px #9e9e9e;
+    z-index: 2;
 }
 
 @media (max-width: 650px) {
@@ -50,6 +64,7 @@ body {
     padding: 8% 7%;
     margin: 0% !important;
     text-align: center;
+    z-index: 3;
 }
 
 .container-form-login {
