--- a/server/public/css/Price/searchModif.css
+++ b/server/public/css/Price/searchModif.css
@@ -24,20 +24,37 @@ body {
     filter: sepia(0.5);
 }
 
+@keyframes background-change {
+    0% {
+        background: radial-gradient(rgb(79, 134, 132), rgb(79, 134, 132), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
+    }
+    /*50% {
+        background: radial-gradient(rgb(126, 125, 125), rgb(126, 125, 125), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
+    }
+    100% {
+        background: radial-gradient(rgb(255, 255, 255), rgb(255, 255, 255), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
+    }*/
+}
+
 .container-btn-return {
-    position: absolute;
-    top: 5vh;
-    left: 7vw;
+    position: fixed;
+    bottom: 2vh;
+    left: 2vw;
     padding: 0%;
     margin: 0%;
     border: none;
     outline: none;
     background: radial-gradient(rgb(0, 0, 0), rgb(0, 0, 0), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
+    animation-name: background-change;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
     z-index: 1;
 }
 
 .container-btn-return:hover {
     background: radial-gradient(rgb(255, 255, 255), rgb(255, 255, 255), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
+    animation-duration: 0s;
 }
 
 .btn-return {
@@ -45,16 +62,17 @@ body {
     position: relative;
     border: none;
     outline: none;
-    background-image: url('../../../images/flecha_volver.png');
+    background-image: url('../../../images/flecha_volver2.png');
     background-color: #4d4f5700;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     width: 50px;
-    height: 50px;
+    height: 35px;
     cursor: pointer;
     padding: 0%;
     margin: 0%;
+    border-radius: 0.4em;
 }
 
 .container-busqueda {
@@ -70,9 +88,83 @@ body {
     margin: 2%;
 }
 
-@media (max-width: 650px) {
+@media (max-width: 249px) {
+    body {
+        background-color: black;
+        overflow: auto;
+    }
+    .container-busqueda {
+        width: 350px;
+    }
+    .busqueda {
+        display: none;
+        width: 350px;
+    }
+}
+
+@media (min-width: 250px) {
+    body {
+        overflow: auto;
+    }
+    .container-busqueda {
+        width: 350px;
+    }
+    .busqueda {
+        width: 350px;
+    }
+}
+
+@media (min-width: 350px) {
+    body {
+        width: 100%;
+    }
+    .container-busqueda {
+        width: 98%;
+    }
+    .busqueda {
+        width: 100%;
+    }
+}
+
+@media (min-width: 450px) {
+    .container-busqueda {
+        width: 95%;
+    }
+}
+
+@media (min-width: 550px) {
     .container-busqueda {
         width: 90%;
+    }
+}
+
+@media (min-width: 650px) {
+    .container-busqueda {
+        width: 85%;
+    }
+}
+
+@media (min-width: 750px) {
+    .container-busqueda {
+        width: 80%;
+    }
+}
+
+@media (min-width: 850px) {
+    .container-busqueda {
+        width: 70%;
+    }
+}
+
+@media (min-width: 950px) {
+    .container-busqueda {
+        width: 60%;
+    }
+}
+
+@media (min-width: 1100px) {
+    .container-busqueda {
+        width: 50%;
     }
 }
 
@@ -92,7 +184,7 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: inherit;
-    padding: 0% 8%;
+    padding: 0% 0%;
     font-size: 1.2rem;
     margin: 2%;
 }
@@ -101,7 +193,7 @@ body {
     position: relative;
     display: flex;
     justify-content: space-between;
-    padding: 10px 0px;
+    padding: 10px 30px;
 }
 
 .container-input label {
@@ -128,6 +220,10 @@ body {
 
 .optionUser:hover, :focus {
     background-color: black;
+}
+
+.input-form-busqueda{
+    margin-right: 10px;
 }
 
 .container-input input {
@@ -197,11 +293,36 @@ body {
 }
 
 .container-input-radios {
+    display: -webkit-box;
+    -webkit-box-pack: justify;
+    -webkit-box-align: baseline;
     color: azure;
+    padding: 0px 30px;
+}
+
+.container-input-radios>p{
+    flex-flow: wrap;
+    min-width: 50%;
+    width: min-content;
+}
+
+.container-input-radios2{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    min-width: 50%;
+    align-content: flex-start;
+}
+
+.input-radios2{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    justify-content: flex-start;
 }
 
 #valor{
-    width: 100px;
+    width: 85px;
     color: white;
     background-color: initial;
     border-style: groove;
