--- a/server/views/Price/search.ejs
+++ b/server/views/Price/search.ejs
@@ -35,11 +35,11 @@
                     </div>
                     <br />
                     <div class='container-btn-form'>                        
-                        <button type='submit' class='btn-form'>Ver Lista</button>
+                        <button type='submit' class='btn-form'>VER LISTA</button>
                     </div>
                 </form>
                 <div class='container-btn-form'>
-                    <button class='btn-form'><a href="/api/menu/prices/searchMassiveModif"><h4>Modificación Masiva</h4></a></button>
+                    <button class='btn-form'><a href="/api/menu/prices/searchMassiveModif"><h4>MODIFICACIÓN MASIVA</h4></a></button>
                 </div>
             </div>
             <script>
