--- a/server/public/css/Login/login.css
+++ b/server/public/css/Login/login.css
@@ -24,16 +24,32 @@ body {
     z-index: -1;
 }
 
+@keyframes background-change {
+    /*0% {
+        background: radial-gradient(rgb(79, 134, 132), rgb(79, 134, 132), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
+    }*/
+    50% {
+        filter: opacity(0.5) blur(1px);
+    }/*
+    100% {
+        background: radial-gradient(rgb(255, 255, 255), rgb(255, 255, 255), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
+    }*/
+}
+
 .container-logo {
     position: absolute;
     background-image: url('../../../images/Systel.png');
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    filter: opacity(0.2);
+    filter: opacity(0.25) blur(5px);
     width: 90vw;
     height: 40vh;
     z-index: 1;
+    animation-name: background-change;
+    animation-duration: 2s;
+    animation-iteration-count: 2;
+    animation-timing-function: linear;
 }
 
 .container-login {
