--- a/server/public/css/Price/searchModif.css
+++ b/server/public/css/Price/searchModif.css
@@ -15,7 +15,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: auto;
+    height: 100vh;
     background-image: url('../../../images/bg-verificador-precios-V4_edicion1.png');
     background-size: cover;
     background-position: center;
@@ -24,40 +24,31 @@ body {
     filter: sepia(0.5);
 }
 
-@keyframes background-change {
-    0% {
-        background: radial-gradient(rgb(79, 134, 132), rgb(79, 134, 132), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
-    }
-    /*50% {
-        background: radial-gradient(rgb(126, 125, 125), rgb(126, 125, 125), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
-    }
-    100% {
-        background: radial-gradient(rgb(255, 255, 255), rgb(255, 255, 255), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
-    }*/
-}
-
-.container-btn-return {
+.container-btn-return{
     position: fixed;
     bottom: 2vh;
     left: 2vw;
     padding: 0%;
     margin: 0%;
     border: none;
-    outline: none;
-    background: radial-gradient(rgb(0, 0, 0), rgb(0, 0, 0), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
-    animation-name: background-change;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
+    outline: none;   
     z-index: 1;
 }
 
-.container-btn-return:hover {
-    background: radial-gradient(rgb(255, 255, 255), rgb(255, 255, 255), rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
-    animation-duration: 0s;
+
+@keyframes background-change {
+    0% {
+        background-color: rgb(52, 146, 138);
+    }
+    50% {
+        background-color: rgb(1, 1, 1);
+    }
+    100% {
+        background-color:rgb(52, 146, 138);
+    }
 }
 
-.btn-return {
+.btn-return{
     display: inline;
     position: relative;
     border: none;
@@ -73,6 +64,15 @@ body {
     padding: 0%;
     margin: 0%;
     border-radius: 0.4em;
+    animation-name: background-change;
+    animation-duration: 2s;
+    animation-iteration-count:infinite;
+    animation-timing-function: linear;
+}
+
+.btn-return:hover {
+    background-color: whitesmoke;
+    animation-duration: 0s;
 }
 
 .container-busqueda {
@@ -242,6 +242,7 @@ body {
 .container-btn-form {
     align-self: center;
     padding-top: 5% 0%;
+    width: 40%;
 }
 
 .btn-form {
@@ -268,6 +269,7 @@ body {
     white-space: nowrap;
     will-change: box-shadow, transform;
     margin-bottom: 30px;
+    width: -webkit-fill-available;
 }
 
 .btn-form:hover {
@@ -302,7 +304,7 @@ body {
 
 .container-input-radios>p{
     flex-flow: wrap;
-    min-width: 50%;
+    min-width: 38%;
     width: min-content;
 }
 
@@ -310,7 +312,7 @@ body {
     display: flex;
     flex-direction: column;
     position: relative;
-    min-width: 50%;
+    min-width: 62%;
     align-content: flex-start;
 }
 
