--- a/server/views/Price/tableModif.ejs
+++ b/server/views/Price/tableModif.ejs
@@ -34,17 +34,17 @@
                     </thead>
                     <tbody>
                         <% if (data) { %>
-                            <% for (var i = 0; i < data.product.pid.length;  i++ ) { %>                            
+                            <% for (var i = 0; i < data.product.length;  i++ ) { %>                            
                                 <tr>
                                     <form method="POST" id="newprice" action="/api/menu/prices/tableMassiveModif">
-                                        <% if (data.product.updtd[i] == false) { %>
+                                        <% if (data.product[i].updated == false) { %>
                                             <td><input class="iconUpdate" onclick="this.form.submit()"></td>
-                                        <% } else if (data.product.updtd[i] == true) { %>
-                                            <td><input class="iconUpdated" onclick="this.form.submit()"></td>
+                                        <% } else if (data.product[i].updated == true) { %>
+                                            <td><input class="iconUpdated" onclick="this.form.submit()" disabled><h2 onclick="rollback(<%= data.product[i].originalprice %>, 'newprice')">X</h2></td>
                                         <% } %>                                    
-                                        <td><input class="inputDisable" type="text" name="id" value="<%= data.product.pid[i] %>" readonly></td>
-                                        <td><input class="inputDisable" type="text" name="name" value="<%= data.product.pname[i] %>" readonly title="<%= data.product.pname[i] %>"></td>
-                                        <td><input class="inputPrice" type="number" name="newPrice" value="<%= data.product.pprice[i] %>" /></td>                                    
+                                        <td><input class="inputDisable" type="text" name="id" value="<%= data.product[i].pid %>" readonly></td>
+                                        <td><input class="inputDisable" type="text" name="name" value="<%= data.product[i].pname %>" readonly title="<%= data.product[i].pname %>"></td>
+                                        <td><input class="inputPrice" type="number"  id="newPrice" name="newPrice" value="<%= data.product[i].pprice %>" /></td>                                    
                                     </form>                                
                                 </tr>
                             <% } %>                            
@@ -110,6 +110,16 @@
                 if (oForm) {
                     oForm.submit(); 
                 }
+            }
+
+            function rollback(oldprice, formID){
+                var new_price = document.getElementById('newPrice').value;
+                console.log('new price: '+new_price);
+                var ori_price = new_price - ((new_price - oldprice) * 2);
+                console.log('original price: '+ori_price);
+                document.getElementById('newPrice').value = ori_price;
+                console.log('new price 2: '+new_price);                
+                submitForm(formID);
             }
 
         </script>        
