mar 09 ago 1336 asistente de precios terminado

--- a/server/views/Price/tableModif.ejs
+++ b/server/views/Price/tableModif.ejs
@@ -27,7 +27,7 @@
                             </th>
                             <th>
                                 <form method="POST" id="input-order-price" action="/api/menu/prices/tableMassiveModif">                                    
-                                    <input class="header-table" type="text" name="order" value="NUEVO PRECIO" readonly onclick="submitForm('input-order-price')">                                    
+                                    <input class="header-table" type="text" name="order" value="NUEVO PRECIO" readonly>                                    
                                 </form>
                             </th>                                                                                           
                         </tr>
