--- a/server/views/ABM/abm.ejs
+++ b/server/views/ABM/abm.ejs
@@ -12,7 +12,7 @@
                 </a>
             </div>
             <div class="card-container">
-                <a href="/" class="anchor-button">
+                <a href="/api/menu/abm/plu" class="anchor-button">
                     <img src="/images/icons/PLUs.png" class="icon">
                     <h5>PLU's</h5>
                 </a>
